<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvResult"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btnWarningDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_dialog"
        android:layout_marginTop="20dp"
        android:background="@color/button"/>
    <Button
        android:id="@+id/btnExitDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_dialog"
        android:layout_marginTop="8dp"
        android:background="@color/button"/>

    <Button
        android:id="@+id/btnListDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_dialog"
        android:layout_marginTop="8dp"
        android:background="@color/button"/>
    <Button
        android:id="@+id/btnMultipleListDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiple_list_dialog"
        android:layout_marginTop="8dp"
        android:background="@color/button"/>
    <Button
        android:id="@+id/btnInputText"
        android:text="@string/input_dialog"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@color/button"/>

    <Button
        android:id="@+id/btnDialogCircle"
        android:text="@string/start_circle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@color/button"/>
    <Button
        android:id="@+id/btnDialogProgress"
        android:text="@string/start_progress"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@color/button"/>

</LinearLayout>